# kros

./: Cargo.toml  README.md
.cargo/: config.toml
other/: mod.rs
other/interrupts_descriptor_table/: idt.rs  mod.rs
other/memory/: memory.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  case.rs  dummy.rs  fixed_size_block.rs  linked_list.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
