[package]
name = "kros"
version = "0.1.0"
edition = "2021"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic】

[dependencies]
bootloader = "0.9"   # for booting: in cargo build after adding the line `bootloader = "0.9"`, gt 0.9 err

# vga lib
# volatile = "0.2.6" # for vga: default version
volatile = "0.4"    # need impl trait: DerefMut and Deref
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.9.8"


